!left alignment fix for fake select background

--- a/magpie/html5/widget/select/m-select.css
+++ b/magpie/html5/widget/select/m-select.css
@@ -67,6 +67,7 @@ m-select .display>.fake-select-overlayout,
 m-select .display>.fake-select{
 	position: absolute;    
 	top:0;
+	left:0;
 	z-index: -1;
 	width: 100%;
 	height: 100%;
